[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ['version']
name = "useful-decorators"
description = "Some decorators for Python"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["decorator", "python", "extensions"]
authors = [
    { name = "Jannes Mülller", email = "jannes@mlrjs.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
homepage = "https://github.com/Hypercookie/UsefulDecorators"
documentation = "https://github.com/Hypercookie/UsefulDecorators"
changelog = "https://github.com/Hypercookie/UsefulDecorators/releases"
[tool.flit.module]
name = "useful_decorators"